--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kaltires",
-  "homepage": "https://kaltires.com",
+  "name": "kvltires",
+  "homepage": "https://kvltires.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
